--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,9 @@
     <link rel="stylesheet" href="web/css/app.css">
     <link rel="stylesheet" href="web/css/emojionearea.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Generate using http://realfavicongenerator.net/ -->
+
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script type="text/javascript" src="web/js/emojionearea.min.js"></script>
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -62,277 +61,43 @@
                 <li class="menu__item menu__item_cloud"><a href="#" class="menu__link">Cloud</a></li>
             </ul>
         </menu>
-        <div class="content__right-column">
-            <div class="conversation">
-                <div id="friends-search-container"> </div>
-                <!--<div class="conversation__menu">-->
-                    <!--<span class="conversation__link active">Conversations</span>-->
-                    <!--<span class="conversation__link">Friends</span>-->
-                    <!--<span class="conversation__link conversation__link_dots"></span>-->
+
+        <div class="content__router-outlet router-outlet" id="router-outlet"></div>
+
+        <!--<div class="content__right-column">-->
+            <!--<div class="conversation">-->
+                <!--<div id="friends-search-container"></div>-->
+                <!--<div class="conversation__messages" id="dialogs-container">-->
                 <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
 
-                <div class="conversation__messages" id="dialogs-container">
-                    <!--<div class="conversation__message new">-->
-                    <!--<img class="conversation__avatar" src="images/photo.png">-->
-                    <!--<div class="conversation__message-info">-->
-                    <!--<h4 class="conversation__name">Константин</h4>-->
-                    <!--<p class="conversation__message-text">Of course!</p>-->
-                    <!--</div>-->
-                    <!--<div class="conversation__message-info">-->
-                    <!--<h4 class="conversation__name conversation__name_right">-->
-                    <!--<span class="conversation__message-count">169</span>-->
-                    <!--<span class="conversation__message-time">1 min</span>-->
-                    <!--</h4>-->
-                    <!--<p class="conversation__message-text conversation__name_right"><i-->
-                    <!--class="conversation__attachment"></i></p>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="conversation__message">-->
-                    <!--<img class="conversation__avatar" src="images/photo.png">-->
-                    <!--<div class="conversation__message-info">-->
-                    <!--<h4 class="conversation__name">Константин</h4>-->
-                    <!--<p class="conversation__message-text">Of course!</p>-->
-                    <!--</div>-->
-                    <!--<div class="conversation__message-info">-->
-                    <!--<h4 class="conversation__name conversation__name_right">-->
-                    <!--<span class="conversation__message-count">169</span>-->
-                    <!--<span class="conversation__message-time">1 min</span>-->
-                    <!--</h4>-->
-                    <!--<p class="conversation__message-text conversation__name_right"><i-->
-                    <!--class="conversation__attachment"></i></p>-->
-                    <!--</div>-->
-                    <!--</div>-->
+        <!--<div class="content__text-container">-->
+           <!---->
+            <!--<section class="chart">-->
+                <!--<div class="chart__messages" id="messages-container"></div>-->
 
-                    <!--<div class="conversation__message">-->
-                    <!--<img class="conversation__avatar" src="images/photo.png">-->
-                    <!--<div class="conversation__message-info">-->
-                    <!--<h4 class="conversation__name">Константин</h4>-->
-                    <!--<p class="conversation__message-text">Of course!</p>-->
-                    <!--</div>-->
-                    <!--<div class="conversation__message-info">-->
-                    <!--<h4 class="conversation__name conversation__name_right">-->
-                    <!--<span class="conversation__message-count">169</span>-->
-                    <!--<span class="conversation__message-time">1 min</span>-->
-                    <!--</h4>-->
-                    <!--<p class="conversation__message-text conversation__name_right"><i-->
-                    <!--class="conversation__attachment"></i>-->
-                    <!--</p>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="conversation__message">-->
-                    <!--<img class="conversation__avatar" src="images/photo.png">-->
-                    <!--<div class="conversation__message-info">-->
-                    <!--<h4 class="conversation__name">Константин</h4>-->
-                    <!--<p class="conversation__message-text">Of course!</p>-->
-                    <!--</div>-->
-                    <!--<div class="conversation__message-info">-->
-                    <!--<h4 class="conversation__name conversation__name_right">-->
-                    <!--<span class="conversation__message-count">169</span>-->
-                    <!--<span class="conversation__message-time">1 min</span>-->
-                    <!--</h4>-->
-                    <!--<p class="conversation__message-text conversation__name_right"><i-->
-                    <!--class="conversation__attachment"></i>-->
-                    <!--</p>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="conversation__message">-->
-                    <!--<img class="conversation__avatar" src="images/photo.png">-->
-                    <!--<div class="conversation__message-info">-->
-                    <!--<h4 class="conversation__name">Константин</h4>-->
-                    <!--<p class="conversation__message-text">Of course!</p>-->
-                    <!--</div>-->
-                    <!--<div class="conversation__message-info">-->
-                    <!--<h4 class="conversation__name conversation__name_right">-->
-                    <!--<span class="conversation__message-time">1 min</span>-->
-                    <!--</h4>-->
-                    <!--<p class="conversation__message-text conversation__name_right">-->
-                    <!--<i class="conversation__attachment" style="visibility: hidden"></i>-->
-                    <!--</p>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="conversation__message active">-->
-                    <!--<img class="conversation__avatar" src="images/photo.png">-->
-                    <!--<div class="conversation__message-info">-->
-                    <!--<h4 class="conversation__name">Константин</h4>-->
-                    <!--<p class="conversation__message-text">Of course!</p>-->
-                    <!--</div>-->
-                    <!--<div class="conversation__message-info">-->
-                    <!--<h4 class="conversation__name conversation__name_right">-->
-                    <!--<span class="conversation__message-count">169</span>-->
-                    <!--<span class="conversation__message-time">1 min</span>-->
-                    <!--</h4>-->
-                    <!--<p class="conversation__message-text conversation__name_right"><i-->
-                    <!--class="conversation__attachment"></i>-->
-                    <!--</p>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="conversation__message">-->
-                    <!--<img class="conversation__avatar" src="images/photo.png">-->
-                    <!--<div class="conversation__message-info">-->
-                    <!--<h4 class="conversation__name">Константин</h4>-->
-                    <!--<p class="conversation__message-text">Of course!</p>-->
-                    <!--</div>-->
-                    <!--<div class="conversation__message-info">-->
-                    <!--<h4 class="conversation__name conversation__name_right">-->
-                    <!--<span class="conversation__message-count">169</span>-->
-                    <!--<span class="conversation__message-time">1 min</span>-->
-                    <!--</h4>-->
-                    <!--<p class="conversation__message-text conversation__name_right"><i-->
-                    <!--class="conversation__attachment"></i>-->
-                    <!--</p>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                </div>
-            </div>
-        </div>
-        <div class="content__text-container">
-            <div class="conver-menu" style="display: none">
-                <div class="conver-menu__users">
-                    <a href="#" class="conver-menu__link"><img src="images/photo.png"></a>
-                    <a href="#" class="conver-menu__link"><img src="images/photo.png"></a>
-                    <a href="#" class="conver-menu__link"><img src="images/photo.png"></a>
-                    <a href="#" class="conver-menu__link"><img src="images/photo.png"></a>
-                    <a href="#" class="conver-menu__link"><img src="images/photo.png">
-                        <span class="conver-menu__count">150+</span>
-                    </a>
-                </div>
-                <div class="conver-menu__control-bar">
-                    <span class="conver-menu__icon conver-menu__icon_add-user"> </span>
-                    <span class="conver-menu__icon conver-menu__icon_add-video"> </span>
-                    <span class="conver-menu__icon conver-menu__icon_settings"> </span>
-                </div>
-                <h3 class="conver-menu__head">Let's go out somewhere this summer. What do you say, ha?</h3>
-            </div>
-            <section class="chart">
-                <div class="chart__messages" id="messages-container">
-                    <!--<div class="chart-message">-->
-                    <!--<div class="chart-message__avatar">-->
-                    <!--<div class="chart-message__avatar-content active">-->
-                    <!--<img src="images/photo.png">-->
-                    <!--<div class="chart-message__controls">-->
-                    <!--<span class="chart-message__control chart-message__control_star"></span>-->
-                    <!--<span class="chart-message__control chart-message__control_share"></span>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="chart-message__time">-->
-                    <!--<span>15 sec.</span>-->
-
-                    <!--</div>-->
-                    <!--<div class="chart-message__content">-->
-                    <!--<p class="chart-message__text">-->
-                    <!--My pictures and some other stuff, part 3. There is going to be more of them. For now-->
-                    <!--they-->
-                    <!--are sold in the USA. Hope that some day, my photos will be sold in every country of the-->
-                    <!--world! :D-->
-                    <!--</p>-->
-                    <!--<div class="chart-message__attach-container">-->
-                    <!--<div class="chart-message__attach">-->
-                    <!--<div class="chart-message__image">-->
-                    <!--<img src="images/file.png">-->
-                    <!--<div class="chart-message__attach-controls">-->
-                    <!--<span class="chart-message__icon chart-message__icon_eye"></span>-->
-                    <!--<span class="chart-message__icon chart-message__icon_cross"></span>-->
-                    <!--</div>-->
-                    <!--<span class="chart-message__ext chart-message__ext_psd">.PSD</span>-->
-                    <!--</div>-->
-                    <!--<div class="chart-message__description">-->
-                    <!--<p>My maiin page.PSD</p>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="chart-message">-->
-                    <!--<div class="chart-message__avatar">-->
-                    <!--<div class="chart-message__avatar-content">-->
-                    <!--<img src="images/photo.png">-->
-                    <!--<div class="chart-message__controls">-->
-                    <!--<span class="chart-message__control chart-message__control_star"></span>-->
-                    <!--<span class="chart-message__control chart-message__control_share"></span>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="chart-message__time">-->
-                    <!--<span>15 sec.</span>-->
-
-                    <!--</div>-->
-                    <!--<div class="chart-message__content">-->
-                    <!--<p class="chart-message__text">-->
-                    <!--My pictures and some other stuff, part 3. There is going to be more of them. For now-->
-                    <!--they-->
-                    <!--are sold in the USA. Hope that some day, my photos will be sold in every country of the-->
-                    <!--world! :D-->
-                    <!--</p>-->
-                    <!--<div class="chart-message__attach-container">-->
-                    <!--<div class="chart-message__attach">-->
-                    <!--<div class="chart-message__image">-->
-                    <!--<img src="images/file.png">-->
-                    <!--<div class="chart-message__attach-controls">-->
-                    <!--<span class="chart-message__icon chart-message__icon_eye"></span>-->
-                    <!--<span class="chart-message__icon chart-message__icon_cross"></span>-->
-                    <!--</div>-->
-                    <!--<span class="chart-message__ext chart-message__ext_psd">.PSD</span>-->
-                    <!--</div>-->
-                    <!--<div class="chart-message__description">-->
-                    <!--<p>My maiin page.PSD</p>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="chart-message mine">-->
-                    <!--<div class="chart-message__avatar">-->
-                    <!--<div class="chart-message__avatar-content active">-->
-                    <!--<img src="images/photo.png">-->
-                    <!--<div class="chart-message__controls">-->
-                    <!--<span class="chart-message__control chart-message__control_star"></span>-->
-                    <!--<span class="chart-message__control chart-message__control_share"></span>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="chart-message__time">-->
-                    <!--<span>15 sec.</span>-->
-
-                    <!--</div>-->
-                    <!--<div class="chart-message__content">-->
-                    <!--<p class="chart-message__text">-->
-                    <!--My pictures and some other stuff, part 3. There is going to be more of them. For now-->
-                    <!--they-->
-                    <!--are sold in the USA. Hope that some day, my photos will be sold in every country of the-->
-                    <!--world! :D-->
-                    <!--</p>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                </div>
-
-                <div class="chart__form-container">
-                    <span class="chart__scroll-to-bottom" id="scroll-bottom">&darr;</span>
-                    <form class="chart__form" id="chart-form">
-                        <div class="chart__input-wrap">
-                            <div class="chart__input">
-                                <input placeholder="Your message" name="message" id="message-input">
-                                <!--<div class="chart__icons-container chart__icons-container_message">-->
-                                    <!--<i class="chart__icon chart__icon_attach"></i>-->
-                                    <!--<i class="chart__icon chart__icon_photo"></i>-->
-                                    <!--<i class="chart__icon chart__icon_smile"></i>-->
-                                <!--</div>-->
-                            </div>
-                            <button class="chart__input-button" type="submit">Send</button>
-                        </div>
-                        <img src="images/photo.png">
-                    </form>
-                </div>
-            </section>
-        </div>
+                <!--<div class="chart__form-container">-->
+                    <!--<span class="chart__scroll-to-bottom" id="scroll-bottom">&darr;</span>-->
+                    <!--<form class="chart__form" id="chart-form">-->
+                        <!--<div class="chart__input-wrap">-->
+                            <!--<div class="chart__input">-->
+                                <!--<input placeholder="Your message" name="message" id="message-input">-->
+                            <!--</div>-->
+                            <!--<button class="chart__input-button" type="submit">Send</button>-->
+                        <!--</div>-->
+                        <!--<img src="images/photo.png">-->
+                    <!--</form>-->
+                <!--</div>-->
+            <!--</section>-->
+        <!--</div>-->
     </section>
 
 </div>
 
-
 <script src="web/js/xhrService.js"></script>
 <script src="web/js/Observer.js"></script>
+<script src="web/js/albumsComponent.js"></script>
 <script src="web/js/conversationComponent.js"></script>
 <script src="web/js/friendsComponent.js"></script>
 <script src="web/js/photosComponent.js"></script>
